--- a/index.qmd
+++ b/index.qmd
@@ -39,8 +39,8 @@ filters:
 <br></br>
 <br></br>
 <br></br>
-<h2>Goals</h2>
-- Adding <span class="parenthetical">new functionality</span> to existing packages (e.g. MAMS).
+<h2>Current Tasks @ESD</h2>
+- Adding <span class="parenthetical">new functionalities</span> to existing packages (e.g. MAMS).
 - Create web-documentation <span class="parenthetical"> using pkgdown.</span>
 - New approach <span class="parenthetical"> in mastering MAMS R package for end-users.</span>
 
